# gambit-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pyright_workflow.yml  ruff_workflow.yml
src/gambit_sdk/: __init__.py
src/gambit_sdk/base_adapter/: base_adapter.py
src/gambit_sdk/errors/: __init__.py  gambit_sdk_errors.py
src/gambit_sdk/schemas/: __init__.py  solution_type_schemas.py  unified_assignment_schemas.py  unified_attempt_schema.py  unified_auth_session_schema.py  unified_credentials_schema.py  unified_grade_schema.py  unified_solution_schema.py
src/gambit_sdk/utils/: __init__.py  exercise_type_to_answer_class.py
tests/: test_adapter_structure.py  test_errors.py  test_schemas_smoke.py  test_validators.py
